[gd_scene load_steps=6 format=3 uid="uid://dkuwmw4kt6fd6"]

[ext_resource type="Script" uid="uid://bp2ihkggafot7" path="res://time_row/time_row.gd" id="1_avc1b"]
[ext_resource type="PackedScene" uid="uid://dllxbmyyau3u5" path="res://int_edit/int_edit.tscn" id="2_egpa3"]
[ext_resource type="PackedScene" uid="uid://cnuti22mjwpd8" path="res://time_recorder/time_recorder.tscn" id="3_pot11"]

[sub_resource type="Theme" id="Theme_iyeqt"]

[sub_resource type="Theme" id="Theme_v1hve"]

[node name="TimeRow" type="FlowContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 2
script = ExtResource("1_avc1b")

[node name="ToggleButton" type="Button" parent="."]
layout_mode = 2
theme = SubResource("Theme_iyeqt")
toggle_mode = true
text = "⏱"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="."]
visible = false
layout_mode = 2

[node name="TimePresetMenu" type="MenuButton" parent="HBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_v1hve")
text = "시간
선택"

[node name="IntEdit" parent="HBoxContainer" instance=ExtResource("2_egpa3")]
layout_mode = 2

[node name="TimeRecorder" parent="." instance=ExtResource("3_pot11")]
layout_mode = 2

[connection signal="toggled" from="ToggleButton" to="." method="_on_check_button_toggled"]
